general text and figure edits from Carrie

--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -5,22 +5,20 @@ The health and functioning of coastal marine ecosystems are under threat from a 
 
 Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which could be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020]. Ideally, impacts are quantified at broad and fine scales for entire regions. For example, along the Atlantic coast of Canada @Murphy2019 quantified activities at the Bay scale (i.e., activities occurring in the watershed or ocean but not overlapping with the meadow) and the local scale (occurring in or in close proximity to the meadow) for 180 seagrass meadows across two bioregions. Together, these analyses allow us to better understand the variation in anthropogenic influences on seagrass meadows and the seagrass-associated biological communities across bioregions and at multiple scales relevant to management efforts.
 
-The objective of this project is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea [@dfo2009]. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) is a conservation priority in the Northern Shelf Bioregion of British Columbia [@DFO2019; @Gale2019], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
+The objective of this project is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea [@dfo2009]. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) has been identified as an Ecologically Significant Species [@dfo2009a], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high or low naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
 
 # Methods
 
 ## Seagrass spatial data
 
-Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of up to 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in 2018 for @Cristiani2021. This dataset consists of surveyed and modeled data from a variety of government and non-governmental sources - primarily the British Columbia Marine Conservation Atlas (BCMCA 2011) and the ShoreZone coastal mapping inventory [@coastalandoceanresources2017] (Table \@ref(tab:eelgrasstable)). Shoreline data are linear features generated from aerial imagery that classify the ecological features of the BC coast including eelgrass. In @CEC2016, these linear features were combined with bathymetric data to generate predictions of eelgrass extent [@reshitnyk2016]. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
-
-Due to the combination of data with varying collection methodologies and error, there is uncertainty in the accuracy of our dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, whereas the newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A newer ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)).
+Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of up to 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in 2018 for @Cristiani2021. This dataset consists of surveyed and modeled data from a variety of government and non-governmental sources - primarily polygon data representing eelgrass meadows compiled by the British Columbia Marine Conservation Atlas (BCMCA 2011) and the ShoreZone coastal mapping inventory [@coastalandoceanresources2017] (Table \@ref(tab:eelgrasstable)). Shoreline data are linear features generated from aerial imagery that classify the ecological features of the BC coast including eelgrass. In the dataset from @reshitnyk2016, these linear features were combined with bathymetric data following the methodology in @Gregr2013 to generate predictions of eelgrass extent. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
 
 ```{r eelgrasstable}
 df <- data.frame(
-  Source = c("British Columbia Marine Conservation Atlas", "Hakai Institue / Shorezone", "Islands Trust", "Community Mapping Network", "Personal observations"),
-  Coverage = c("coastwide", "coastwide (with gaps in the Strait of Georgia)", "Gulf Islands and Howe Sound", "coastwide (but used just Tsawwassen and Boundary Bay polygons)", "West and North Vancouver"),
+  Source = c("British Columbia Marine Conservation Atlas", "Hakai Institute (modified Shorezone data)", "Islands Trust", "Community Mapping Network", "Personal observations"),
+  Coverage = c("coastwide", "coastwide (with gaps in the Strait of Georgia)", "Gulf Islands and Howe Sound", "coastwide (but used just Tsawwassen and Boundary Bay polygons to fill gaps in other datasets)", "West and North Vancouver"),
   Dates = c("1890-2010", "1992-2017", "2012-2014", "unknown", "2016"),
-  Access = c("bcmca.ca", "catalogue.hakai.org", "islandstrust.bc.ca (restricted)", "cmnbc.ca/atlasgallery/eelgrass-bed-mapping", "request from author")
+  Access = c("bcmca.ca/data/eco_vascplants_ eelgrass_polygons", "catalogue.hakai.org", "islandstrust.bc.ca (restricted)", "cmnbc.ca/atlasgallery/eelgrass-bed-mapping", "request from author")
   )
 
 kbl(df, "latex", align="cl", booktabs = TRUE, caption = "Eelgrass spatial data sources",
@@ -42,7 +40,7 @@ knitr::include_graphics(here::here("figures/01_studyarea.png"))
 
 ## Shoreline area adjacent to seagrass meadows
 
-Previous guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m of the coastline adjacent to each seagrass meadow. For our analysis we used the high water coastline from the 1:20,000 scale Freshwater Atlas provincial dataset [@geobc2010]. Quantifying modifications within a buffer zone requires generating consistent buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This would result in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
+Previous guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m of the coastline adjacent to each seagrass meadow. For our analysis we used the high water coastline from the 1:20,000 scale Freshwater Atlas provincial dataset [@geobc2010] and buffered inland from this line. Quantifying modifications within a buffer zone required generating consistent width buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This would result in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
 
 
 ## Quantifying shoreline modifications
@@ -56,7 +54,7 @@ To quantify the overall level of shoreline modification we totaled the area of a
 ```{r modifications}
 d <- data.frame(
   Modification = c("Road", "Residential", "Industrial", "Agriculture", "Greenspace", "Unclear"),
-  Subcategory_descriptors = c("paved; dirt; rail", "house; RV; lighthouse", "logging; airport; general development; parking; storage; marina; church; electrical; ferry; hospital; train yard; shipping", "crop; fishfarm", "cleared; campground; golf; park; recreation", "unclear") 
+  Subcategory_descriptors = c("paved; dirt; rail", "house; RV; lighthouse", "logging; airport; general development; parking; storage; onland marina infrastructure; church; electrical; ferry; hospital; train yard; shipping", "crop; cleared agricultural land; onland aquaculture", "cleared greenspace; campground; golf; park; recreation", "unclear modification") 
   )
 
 kbl(d, "latex", align="cl", booktabs = TRUE, caption = "Shoreline modification primary classifications and additional subcategory descriptors.",
@@ -72,33 +70,34 @@ kbl(d, "latex", align="cl", booktabs = TRUE, caption = "Shoreline modification p
 
 # Results
 
-The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers. The lowest levels of modification occurred near smaller islands and in the northern part of the study area (i.e. Johnstone Strait). The median amount of modified shoreline was 9%. Of the 685 meadows, 19% had no modifications, 9% were more than 50% modified, and 1% were more than 80% modified (Figure \@ref(fig:percentmod)). The dominant modification type across the study area was residential development (Figure \@ref(fig:percentmodpertype)a). All other modification types had relatively low values, except at two meadows (Crofton, Duncan Bay) where the shoreline was more than 75% modified by industrial development (Figure \@ref(fig:percentmodpertype)c). The dominant modification type across the study area was residential development. Agriculture varied by latitude with most coastal agriculture occurring in the southern portion of the study area (Figure \@ref(fig:percentmodpertype)b).
+The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers. The lowest levels of modification occurred near smaller islands and in the northern part of the study area (i.e. Johnstone Strait). The median amount of modified shoreline was 9%. Of the 685 meadows, 19% had no modifications, 9% were more than 50% modified, and 1% were more than 80% modified (Figure \@ref(fig:percentmod)). The dominant modification type across the study area was residential development (Figure \@ref(fig:percentmodpertype)a). All other modification types had relatively low values, except at two meadows (Crofton, Duncan Bay) where the shoreline was more than 75% modified by industrial development (Figure \@ref(fig:percentmodpertype)c). Agriculture varied by latitude with most coastal agriculture occurring in the southern portion of the study area, where for example, the shoreline of the Roberts Bank meadow was 24% modified by agricultural uses (Figure \@ref(fig:percentmodpertype)b).
 
 ```{r exampleareas, fig.pos="H", fig.cap = "Shoreline modifications within buffered areas adjacent to seagrass meadows. All buffers are 100 meters wide, as measured from the coastline. The six selected areas are shown for example and do not imply any significance over other areas."}
 knitr::include_graphics(here::here("figures/02_shorelinemod_examples.png"))
 ```
 
-```{r percentmod, fig.pos="H", fig.cap = "The modified percent of the shoreline buffered area adjacent to each seagrass meadow."}
+```{r percentmod, fig.pos="H", fig.cap = "The percent of shoreline modified within the buffered area adjacent to each seagrass meadow."}
 knitr::include_graphics(here::here("figures/03_shorelinemod_percentage.png"))
 ```
 
-```{r percentmodpertype, fig.pos="H", fig.cap = "The modified percent of the shoreline buffered area adjacent to each seagrass meadow by modification type: (a) residential, (b) agriculture, (c) industrial, (d) roads, (e) greenspace."}
+```{r percentmodpertype, fig.pos="H", fig.cap = "The percent of shoreline modified within the buffered area adjacent to each seagrass meadow by modification type: (a) residential, (b) agriculture, (c) industrial, (d) roads, (e) greenspace."}
 knitr::include_graphics(here::here("figures/04_shorelinemod_perctype.png"))
 ```
 
 # Discussion
 
-By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different shoreline threats that seagrass meadows may face based on their location. While areas of high naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020]. If an area including a meadow is selected for management (e.g. an EBSA), then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. It will then be important to know the spatial distribution of modifications because the management action will vary with the type of modification.
+By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different shoreline threats that seagrass meadows may face based on their location. While areas of high naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020]. If an area including a meadow is selected for management action and eelgrass is identified as a conservation objective, then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. It will then be important to know the spatial distribution of modifications because the management action will vary with the type of modification. The approach we demonstrate here could be also be applied to assess potential impacts to other nearshore habitat types that have been identified as ecologically significant.
 
-This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022]. Lastly, since the time of this analysis eelgrass has continued to be mapped and datasets refined. It will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets. 
+This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors occurring in the larger watershed and surrounding marine environment is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022].
 
-Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea, seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
+Due to the combination of seagrass meadow data with varying collection methodologies and error, there is uncertainty in the accuracy of our seagrass dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset [@proudfoot2022] shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, as these meadows are retained as point and line features in the newer dataset. The newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A recent ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)). Given these discrepancies, it will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets.
+
+Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
 
 
 # Data availability
 
-The code used to generate the dataset for this study is available at <Link to code in github repo>. *(perhaps consider moving just the one script to the report repo)*\
-The shoreline modification dataset is available at: *Link to dataset wherever it gets hosted*
+The shoreline modification dataset is available at: *Link to GISHub*. The seagrass dataset contains data with sharing restrictions, however, portions of the dataset can be made available upon request.
 
 
 \clearpage
