revisions from Carrie

--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -90,14 +90,14 @@ By quantifying shoreline modifications adjacent to seagrass meadows, we've provi
 
 This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors occurring in the larger watershed and surrounding marine environment is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022].
 
-Due to the combination of seagrass meadow data with varying collection methodologies and error, there is uncertainty in the accuracy of our seagrass dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset [@proudfoot2022] shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, as these meadows are retained as point and line features in the newer dataset. The newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A recent ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)). Given these discrepancies, it will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets.
+Due to the combination of seagrass meadow data with varying collection methodologies and error, there is uncertainty in the accuracy of our seagrass dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset [@proudfoot2022] shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, as these meadows were retained as point and line features in the newer dataset and not extended as modeled polygons due to area uncertainty. The newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A recent ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)). Given these discrepancies, it will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets.
 
 Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
 
 
 # Data availability
 
-The shoreline modification dataset is available at: *Link to GISHub*. The seagrass dataset contains data with sharing restrictions, however, portions of the dataset can be made available upon request.
+Data is currently restricted to DFO Science and is available at: *Link to GISHub*, but can be made available to others upon request. The seagrass dataset contains data with sharing restrictions, however, portions of the dataset can also be made available upon request.
 
 
 \clearpage
@@ -118,11 +118,11 @@ The shoreline modification dataset is available at: *Link to GISHub*. The seagra
 \clearpage
 # SEAGRASS DATASET DIFFERENCES {#app:first-appendix}
 
-```{r meadowDiff, fig.pos="H", fig.cap = "The areas of difference between the dataset used in this analysis (created in 2018 for Cristiani et al. 2021) and a newer seagrass spatial dataset from DFO. Only areas where datasets do not overlap are shown."}
+```{r meadowDiff, fig.pos="H", fig.cap = "The areas of difference between the dataset used in this analysis (created in 2018 for Cristiani et al. 2021) and the updated seagrass spatial dataset (Proudfoot 2022). Only areas where datasets do not overlap are shown. Our dataset generally shows more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, as these meadows were retained as point and line features in the newer dataset and not extended as modeled polygons due to area uncertainty. The outlines of the meadow polygons are exaggerated for visualization purposes."}
 knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_1.png"))
 ```
 
-```{r meadowDiffShorezone, fig.pos="H", fig.cap = "The recent additions to the ShoreZone eelgrass dataset that are not present in the dataset used in this study."}
+```{r meadowDiffShorezone, fig.pos="H", fig.cap = "The recent additions to the ShoreZone eelgrass dataset that are not present in the dataset used in this study. The outlines of the meadow polygons are exaggerated for visualization purposes."}
 knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_2.png"))
 ```
 
