--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -1,11 +1,11 @@
 
 # Introduction
 
-The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, and logging can create pressures on the marine environment. A modified shoreline may exacerbate the impacts of these broad scale activities by altering levels of sedimentation, nutrient runoff, and pollution in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, modifications that harden the shoreline may decrease the ecosystem services that these habitats provide, e.g., buffering from wave energy and sea level rise [@gittman2016; @Robb2014; @shaughnessy2012]. Furthermore, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and to understand seagrass ecosystem dynamics in a broader seascape context.
+The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, and logging can create pressures on the marine environment. A modified shoreline may exacerbate the impacts of these broad scale activities by altering levels of sedimentation, nutrient runoff, and pollution in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, modifications that harden the shoreline may decrease the ecosystem services that these habitats provide, e.g., buffering from wave energy and sea level rise [@gittman2016; @Robb2014; @shaughnessy2012]. Furthermore, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and to understand seagrass ecosystem dynamics in a broader landscape context.
 
-Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which could be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020]. Ideally, impacts are quantified at broad and fine scales for entire regions. For example, along the Atlantic coast of Canada @Murphy2019 quantified activities at the Bay scale (i.e., activities occurring in the watershed or ocean but not overlapping with the meadow) and the local scale (occurring in or in close proximity to the meadow) for 180 seagrass meadows across two bioregions. Together, these analyses allow us to better understand the variation in anthropogenic influences on seagrass meadows and the seagrass-associated biological communities across bioregions and at multiple scales relevant to management efforts.
+Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which could be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020]. Ideally, impacts are quantified at broad and fine scales for entire regions. For example, along the Atlantic coast of Canada, @Murphy2019 quantified activities at the Bay scale (i.e., activities occurring in the watershed or ocean but not overlapping with the meadow) and the local scale (occurring in or in close proximity to the meadow) for 180 seagrass meadows across two bioregions. Together, these analyses allow us to better understand the variation in anthropogenic influences on seagrass meadows and the seagrass-associated biological communities across bioregions and at multiple scales relevant to management efforts.
 
-The objective of this project is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea [@dfo2009]. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) has been identified as an Ecologically Significant Species [@dfo2009a], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high or low naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
+The objective of this project is to map and quantify the inland shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea [@dfo2009]. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) has been identified as an Ecologically Significant Species [@dfo2009a], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high or low naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
 
 # Methods
 
@@ -40,7 +40,7 @@ knitr::include_graphics(here::here("figures/01_studyarea.png"))
 
 ## Shoreline area adjacent to seagrass meadows
 
-Previous guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m of the coastline adjacent to each seagrass meadow. For our analysis we used the high water coastline from the 1:20,000 scale Freshwater Atlas provincial dataset [@geobc2010] and buffered inland from this line. Quantifying modifications within a buffer zone required generating consistent width buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This would result in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
+Previous guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m inland of the coastline adjacent to each seagrass meadow. For our analysis we used the high water coastline from the 1:20,000 scale Freshwater Atlas provincial dataset [@geobc2010] and buffered inland from this line. Quantifying modifications within a buffer zone required generating consistent width buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This would result in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
 
 
 ## Quantifying shoreline modifications
@@ -80,7 +80,7 @@ knitr::include_graphics(here::here("figures/02_shorelinemod_examples.png"))
 knitr::include_graphics(here::here("figures/03_shorelinemod_percentage.png"))
 ```
 
-```{r percentmodpertype, fig.pos="H", fig.cap = "The percent of shoreline modified within the buffered area adjacent to each seagrass meadow by modification type: (a) residential, (b) agriculture, (c) industrial, (d) roads, (e) greenspace."}
+```{r percentmodpertype, fig.pos="H", fig.cap = "The percent of shoreline modified within the buffered area adjacent to each seagrass meadow by modification type: (a) residential, (b) agriculture, (c) industrial, (d) roads, (e) greenspace. Uncertain classification type is not shown."}
 knitr::include_graphics(here::here("figures/04_shorelinemod_perctype.png"))
 ```
 
@@ -92,12 +92,12 @@ This analysis could be strengthened by addressing some of its assumptions and li
 
 Due to the combination of seagrass meadow data with varying collection methodologies and error, there is uncertainty in the accuracy of our seagrass dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset [@proudfoot2022] shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, as these meadows were retained as point and line features in the newer dataset and not extended as modeled polygons due to area uncertainty. The newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A recent ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)). Given these discrepancies, it will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets.
 
-Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
+Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather high resolution spatial data that informs the initial stage of these analyses.
 
 
 # Data availability
 
-Data is currently restricted to DFO Science and is available at: *Link to GISHub*, but can be made available to others upon request. The seagrass dataset contains data with sharing restrictions, however, portions of the dataset can also be made available upon request.
+Data is currently restricted to DFO Science and is available at: *Link to GISHub*, but can be made available to others upon a request to the lead author (john.cristiani\@dfo-mpo.gc.ca). The seagrass dataset contains data with sharing restrictions, however, portions of the dataset can also be made available upon request.
 
 
 \clearpage
